Make sure ColorUtility is JRE1.3 compatible